<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="book"
            type="com.example.ezycommerce.model.Book" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dimen_16dp"
            >

            <ImageView
                android:id="@+id/iv_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/text_image_content_description"
                android:adjustViewBounds="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginEnd="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_12dp"
                android:text="@{book.name}"
                android:textSize="@dimen/text_20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:text="The Power of HABIT"
                app:layout_constraintTop_toBottomOf="@id/iv_photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/tv_author"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_4dp"
                android:textSize="@dimen/text_16sp"
                android:text="@{book.author}"
                android:textColor="@color/black"
                tools:text="Charles Duhigg"
                app:layout_constraintTop_toBottomOf="@id/tv_name"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                app:layout_constraintEnd_toEndOf="@id/tv_name"
                />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_4dp"
                android:layout_marginBottom="@dimen/dimen_12dp"
                android:textSize="@dimen/text_16sp"
                android:text="@{@string/text_price_display(book.price)}"
                tools:text="$16.33"
                app:layout_constraintVertical_bias="0"
                android:textColor="@color/red"
                app:layout_constraintTop_toBottomOf="@id/tv_author"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                app:layout_constraintEnd_toEndOf="@id/tv_name"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <TextView
                android:id="@+id/text_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_4dp"
                android:layout_marginEnd="@dimen/dimen_12dp"
                android:text="@string/text_category"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                app:layout_constraintEnd_toEndOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/tv_price"
                />

            <TextView
                android:id="@+id/text_category_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="@dimen/dimen_12dp"
                android:text="@{book.category}"
                android:textColor="@color/black"
                android:textSize="@dimen/text_16sp"
                tools:text="Business"
                app:layout_constraintEnd_toEndOf="@id/guideline"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                app:layout_constraintTop_toBottomOf="@id/text_category"
                />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"
                />

            <TextView
                android:id="@+id/text_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_4dp"
                android:layout_marginStart="@dimen/dimen_12dp"
                android:text="@string/text_type"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintEnd_toEndOf="@id/tv_name"
                app:layout_constraintTop_toBottomOf="@id/tv_price"
                />

            <TextView
                android:id="@+id/text_type_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="@dimen/dimen_12dp"
                android:text="@{book.type}"
                android:textColor="@color/black"
                android:textSize="@dimen/text_16sp"
                tools:text="Business"
                app:layout_constraintEnd_toEndOf="@id/tv_name"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/text_type"
                />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="text_category_value"
                />

            <TextView
                android:id="@+id/text_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_4dp"
                android:text="@string/text_description"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                app:layout_constraintEnd_toEndOf="@id/tv_name"
                app:layout_constraintTop_toBottomOf="@id/barrier"
                />

            <TextView
                android:id="@+id/text_description_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:textSize="@dimen/text_16sp"
                android:text="@{book.description}"
                android:justificationMode="inter_word"
                tools:text="lorem"
                app:layout_constraintTop_toBottomOf="@id/text_description"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                app:layout_constraintEnd_toEndOf="@id/tv_name"
                />

            <Button
                android:id="@+id/btn_buy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:layout_marginTop="@dimen/dimen_8dp"
                app:srcCompat="@drawable/ic_payment"
                android:tint="@color/white"
                android:text="@string/text_buy"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@id/guideline"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                app:layout_constraintTop_toBottomOf="@id/text_description_value"
                />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="iv_photo,tv_name,tv_author,tv_price,text_category_value,text_category,text_type,text_type_value,text_description,text_description_value,btn_buy"
                />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>